// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Card Default 1`] = `
<div
  className="p-4 bg-white border dark:bg-black dark:border-trueGray-800 shadow-lg box-border rounded-md text-coolGray-900 dark:text-trueGray-100"
>
  hello world
</div>
`;

exports[`Storyshots Card Primary 1`] = `
<div
  className="p-4 bg-primary-50 dark:bg-primary-900 box-border rounded-md text-coolGray-900 dark:text-trueGray-100"
>
  hello world
</div>
`;

exports[`Storyshots Card Wash 1`] = `
<div
  className="p-4 bg-coolGray-100 dark:bg-trueGray-900 box-border rounded-md text-coolGray-900 dark:text-trueGray-100"
>
  hello world
</div>
`;
